objects/Lead.object
<CustomObject>
    <fields>
        <fullName>L2O_Preferred_Contact_Method__c</fullName>
        <description>Contact&apos;s preferred way of being reached, if any.</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Ready_for_Conversion_to_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Conversion to Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Reason_Disqualified__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bad data</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Not responsive</fullName>
                </value>
                <value>
                    <fullName>Partner/competitor</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
                <value>
                    <fullName>Product fit</fullName>
                </value>
                <value>
                    <fullName>Selected competitor</fullName>
                </value>
                <value>
                    <fullName>No authority</fullName>
                </value>
                <value>
                    <fullName>Student/prospective employee</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Recyle_Lead__c</fullName>
        <formula>CASE(L2O_Reason_Disqualified__c,
      &apos;No interest/need&apos;,1, 
						&apos;Already has an Opportunity/Duplicate&apos;,1,
						&apos;Incorrectly Assigned/Wrong Rep&apos;,1,
						&apos;No Interest/need&apos;,1,
						&apos;No budget&apos;,1,
						&apos;Unable to Reach&apos;,1,
&apos;Job Title Not Relevant&apos;,1,
						&apos;Inaccurate Data&apos;,0,
						&apos;Student/Retired&apos;,0,
						&apos;Competitor&apos;,0,
						&apos;Other&apos;,0,
0)=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recyle Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Referencing_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referencing Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Notes__c</fullName>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Tier__c</fullName>
        <label>Referral Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Referral_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Route_to__c</fullName>
        <label>Route to</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Synch_to_Marketo_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for marketing automation (Marketo) synchronization</description>
        <inlineHelpText>Used for marketing automation (Marketo) synchronization</inlineHelpText>
        <label>Synch to Marketo Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Total_US_Employees_Benefits_Enrolled__c</fullName>
        <inlineHelpText>Total potential coverable employees at a customer</inlineHelpText>
        <label>Total US Employees, Benefits-Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Unsync_from_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To prevent orphan leads and contacts in MKTO</description>
        <inlineHelpText>To prevent orphan leads and contacts in MKTO</inlineHelpText>
        <label>Unsync from SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_age__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_lead_owner_role_profile__c</fullName>
        <label>Lead Owner Role-Profile</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_mkto71_Acquisition_Date__c</fullName>
        <description>Marketo field to capture Acquisition Date</description>
        <inlineHelpText>Marketo field to capture Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_mkto71_Acquisition_Program__c</fullName>
        <description>Marketo field to capture Acquisition Program</description>
        <inlineHelpText>Marketo field to capture Acquisition Program</inlineHelpText>
        <label>Acquisition Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_mkto71_Lead_Score__c</fullName>
        <description>Marketo Field to capture Lead Score</description>
        <inlineHelpText>Marketo Field to capture Lead Score</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_To__c</fullName>
        <inlineHelpText>Select the company this lead is transferred to.</inlineHelpText>
        <label>Transferred To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>ITH</fullName>
                </value>
                <value>
                    <fullName>Livongo</fullName>
                    <isActive>false</isActive>
                    <label>Livongo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dnb_exclude_company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from D&amp;B Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Current_Sales_Campaign__c</fullName>
        <label>Current Sales Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Activity_By_Sales__c</fullName>
        <label>Last Activity by Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c),
    HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?mode=fullList&amp;view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; SUBSTITUTE(mkto_si__Last_Interesting_Moment_Desc__c,SUBSTITUTE($Label.mkto_si__System_Newline, &quot;--linebreak--&quot;, &quot;&quot;),&quot; &quot;) ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Sales_Engagement__c</fullName>
        <label>Last Sales Engagement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Lead_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Last_Replied__c</fullName>
        <label>Sales Last Replied</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_ExecutiveID__c</fullName>
        <label>DHC Executive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HospitalID__c</fullName>
        <description>Definitive Hospital ID</description>
        <label>Definitive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DHC Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Record_Changed_Date__c</fullName>
        <label>DHC Record Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_SyncTime__c</fullName>
        <description>Last time the lead data was synced with DefHC database.</description>
        <label>DHC Sync Time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Inquiry_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>L2O_age__c</columns>
        <columns>L2O_Account_Type__c</columns>
        <columns>L2O_Account_Sub_Type__c</columns>
        <columns>L2O_Lead_Source_Detail_Other__c</columns>
        <columns>L2O_AQL_Date__c</columns>
        <columns>L2O_mkto71_Lead_Score__c</columns>
        <filterScope>Queue</filterScope>
        <label>Inquiry_Lead_Queue</label>
        <queue>Inquiry_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2O_AQL_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>L2O_age__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>L2O_Account_Type__c</columns>
        <columns>L2O_Account_Sub_Type__c</columns>
        <columns>L2O_Lead_Source_Detail_Other__c</columns>
        <columns>L2O_AQL_Date__c</columns>
        <columns>L2O_mkto71_Lead_Score__c</columns>
        <filterScope>Queue</filterScope>
        <label>AQL Lead Queue</label>
        <queue>L2O_AQL_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2O_AQL_list_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>L2O_Lead_Source_Detail__c</field>
            <operation>notEqual</operation>
            <value>Telemarketing,Nurture</value>
        </filters>
        <label>Marketo Inbound Lead</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>texcellency__DHC_Attached_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>texcellency__DefHC_HospitalID__c</columns>
        <columns>texcellency__DefHC_ExecutiveID__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>texcellency__DefHC_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>texcellency__DefHC_ExecutiveID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>DHC Attached Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>L2O_AQL_to_Direct_Conversion</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    NOT($Profile.Name = &quot;Marketing Ops&quot; ), 
       IF(NOT($Profile.Name = &quot;Lead Development&quot;),
     AND(
          ISCHANGED(L2O_Ready_for_Conversion_to_Opportunity__c),
          L2O_Ready_for_Conversion_to_Opportunity__c = True
         ),AND(ISCHANGED(L2O_Ready_for_Conversion_to_Opportunity__c),L2O_Ready_for_Conversion_to_Opportunity__c = True,NOT(ISPICKVAL( Status , &quot;SAL&quot;)))),
     AND(
     ISCHANGED(L2O_Ready_for_Conversion_to_Opportunity__c),
      L2O_Ready_for_Conversion_to_Opportunity__c = True,  
     OR(NOT(ISPICKVAL(L2O_Account_Type__c , &quot;Health Plan&quot;) || ISPICKVAL(L2O_Account_Type__c , &quot;Employer&quot;) || ISPICKVAL(L2O_Account_Type__c , &quot;Partner&quot;) || ISPICKVAL(L2O_Account_Type__c , &quot;Insurer&quot;)),
        NOT(ISPICKVAL( Status , &quot;AQL&quot;)))
       )
    )</errorConditionFormula>
        <errorDisplayField>L2O_Ready_for_Conversion_to_Opportunity__c</errorDisplayField>
        <errorMessage>Please ensure this is a USGH lead in AQL status or reach out to Marketing Ops to allow a directly conversion to an Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_AccountType_and_AccountSubType_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsConverted,
OR(
TEXT( L2O_Account_Type__c ) == null,
TEXT( L2O_Account_Sub_Type__c ) == null
)
)</errorConditionFormula>
        <errorMessage>Please ensure Account Type and Account Sub-Type values are populated on the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Account_Type_mandatory_for_AQL</fullName>
        <active>true</active>
        <description>Ensure you have a &apos;Account Type&apos; value inputted before saving the Lead</description>
        <errorConditionFormula>AND(TEXT(Status) == &apos;AQL&apos;,TEXT( L2O_Account_Type__c) == null ,NOT( $Profile.Name == &apos;Marketo Sync&apos;))</errorConditionFormula>
        <errorMessage>Please add Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_AQL_or_MQL_to_Disqualified</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; (ISPICKVAL(PRIORVALUE(Status) , &quot;AQL&quot;) || ISPICKVAL(PRIORVALUE(Status) , &quot;MQL&quot;))&amp;&amp; ISPICKVAL( Status , &quot;Disqualified&quot;)</errorConditionFormula>
        <errorMessage>May not move AQL/MQL to Disqualified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_Disqualified_to_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL( Status , &quot;Rejected&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(Status) , &quot;Disqualified&quot;)</errorConditionFormula>
        <errorMessage>May not move Disqualified to Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_HHS_MQLs_to_SAL</fullName>
        <active>true</active>
        <description>Avoids direct set of Lead Status to SAL</description>
        <errorConditionFormula>AND
(
ISCHANGED(Status),
if(NOT(ISPICKVAL(PRIORVALUE(Status),&quot;MQL&quot;))&amp;&amp; ISPICKVAL(Status ,&quot;SAL&quot;),
if($Profile.Name !=&quot;Marketing Ops&quot; &amp;&amp; $Profile.Name !=&quot;Lead Development&quot;, true ,if (L2O_Ready_for_Conversion_to_Opportunity__c = True, false ,if (NOT(ISPICKVAL(L2O_Account_Type__c,&quot;Health &amp; Hospital System&quot;)), true,                                                                                                                                                                                                                                                                                                                                                      if (ISPICKVAL(L2O_Lead_Source_Detail__c,&quot;Web Chat&quot;) || ISPICKVAL(L2O_Lead_Source_Detail__c,&quot;Web form&quot;),true,false)))) , false )
)</errorConditionFormula>
        <errorMessage>Please ensure to nurture the lead from MQL to SAL before moving further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_SAL_to_Disqualified</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISCHANGED(Status) &amp;&amp; ISPICKVAL( Status , &quot;Disqualified&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(Status) , &quot;SAL&quot;),
 AND(NOT($Profile.Name =&quot;Lead Development&quot;),NOT($Profile.Name =&quot;Sales&quot;)),
 false)</errorConditionFormula>
        <errorMessage>Only Lead Development/Sales user may Disqualified a Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_SAL_to_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(PRIORVALUE(Status) , &quot;SAL&quot;) &amp;&amp; ISPICKVAL( Status , &quot;Rejected&quot;)</errorConditionFormula>
        <errorMessage>May not move an accepted Lead to Rejected status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Move_USGH_AQLs_to_MQL</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status ),
IF(NOT(ISPICKVAL(PRIORVALUE( Status ),&quot;AQL&quot;)),ISPICKVAL(Status ,&quot;MQL&quot;)&amp;&amp;(NOT(ISPICKVAL(PRIORVALUE( Status ),&quot;SAL&quot;)) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE( Status ),&quot;Rejected&quot;))),
IF(NOT($Profile.Name = &quot;Marketing Ops&quot;),
(ISPICKVAL(L2O_Account_Type__c, &quot;Health Plan&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Employer&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Partner&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Insurer&quot;)) 
    &amp;&amp; (ISPICKVAL(Status ,&quot;SAL&quot;) || L2O_Ready_for_Conversion_to_Opportunity__c = true),
(ISPICKVAL(L2O_Account_Type__c, &quot;Health Plan&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Employer&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Partner&quot;) || 
	    ISPICKVAL(L2O_Account_Type__c, &quot;Insurer&quot;)) 
    &amp;&amp; ((ISPICKVAL(Status ,&quot;MQL&quot;) &amp;&amp; L2O_Ready_for_Conversion_to_Opportunity__c = true) || 
(ISPICKVAL(Status ,&quot;SAL&quot;) &amp;&amp; L2O_Ready_for_Conversion_to_Opportunity__c = false))))
)</errorConditionFormula>
        <errorMessage>Please ensure to nurture the lead from AQL to MQL before moving further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Referral_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
  L2O_Referencing_Client__c != null,
  L2O_Referral_Notes__c!= null,
  NOT(ISPICKVAL(L2O_Referral_Tier__c, &apos;&apos;))
 ),
  L2O_Referral__c == false
)</errorConditionFormula>
        <errorMessage>Please ensure that the Lead is a referral (Referral? checkbox=true) in order to save/update referral details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_SAL_Comments_filled</fullName>
        <active>true</active>
        <description>If Status is changed to SAl and comments are not filled</description>
        <errorConditionFormula>ISCHANGED(Status)&amp;&amp; TEXT(Status)==&apos;SAL&apos; &amp;&amp;  ISBLANK(L2O_Comments__c)</errorConditionFormula>
        <errorDisplayField>L2O_Comments__c</errorDisplayField>
        <errorMessage>Please ensure that Next step/Comments are added</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Sales_Qualified_if_SAL_USGH</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( L2O_Lead_Status_Detail__c ) &amp;&amp; TEXT(Status) == &apos;SAL&apos; 
&amp;&amp; L2O_Ready_for_Conversion_to_Opportunity__c == true 
&amp;&amp; ((ISPICKVAL(L2O_Account_Type__c, &quot;Health Plan&quot;)) ||
            (ISPICKVAL(L2O_Account_Type__c, &quot;Employer&quot;)) ||
            (ISPICKVAL(L2O_Account_Type__c, &quot;Partner&quot;)) ||
            (ISPICKVAL(L2O_Account_Type__c, &quot;Insurer&quot;))) 
&amp;&amp; NOT(TEXT( L2O_Lead_Status_Detail__c) == &apos;Sales Qualified&apos;) 
&amp;&amp; $Profile.Name == &apos;Lead Development&apos;</errorConditionFormula>
        <errorMessage>Please Ensure Lead Status Detail is &apos;Sales Qualified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_check_status_sal_before_conversion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsConverted,NOT(ISPICKVAL(PRIORVALUE(Status),&apos;SAL&apos;) &amp;&amp; ISPICKVAL(PRIORVALUE( L2O_Lead_Status_Detail__c ),&apos;Sales Qualified&apos;)))</errorConditionFormula>
        <errorMessage>Unable to convert Lead at this time, please make sure to nurture Lead Status = SAL and Lead Status Detail = Sales Qualified before continuing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_validation_movement_from_reject_AQL</fullName>
        <active>true</active>
        <description>User can change Rejected stage to AQL and status of the lead to &apos;Being Nurtured&apos; only when the Reason Rejected</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(PRIORVALUE(Status),&apos;Rejected&apos;) &amp;&amp;
TEXT(Status) == &apos;AQL&apos; &amp;&amp; ISPICKVAL( L2O_Lead_Status_Detail__c,&apos;Being Nurtured&apos;) &amp;&amp; NOT(CONTAINS(   LOWER($CustomMetadata.L2O_Rejection_Reason_valid_for_movement__mdt.Reason_valid.reason_valid_for_movement__c),LOWER(TEXT(PRIORVALUE(L2O_Reason_Disqualified__c)))) )</errorConditionFormula>
        <errorMessage>Please ensure the Reason Rejected is qualified for re-nurturing before moving back to AQL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>read_only_record_type</fullName>
        <active>true</active>
        <description>Cant edit record when its in read only record type</description>
        <errorConditionFormula>AND(!ISCHANGED(Transferred_To__c), ISPICKVAL(Transferred_To__c ,&apos;ITH&apos;) , $Profile.Name != &apos;System Administrator&apos; )</errorConditionFormula>
        <errorMessage>This record is read only.</errorMessage>
    </validationRules>
</CustomObject>